# airbyte-destination-altertable

./: .gitignore  Dockerfile  Makefile  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  docker-publish.yml
destination_altertable/: altertable_writer.py  arrow_flight_sql_definitions.py  destination.py  spec.yaml
scripts/: destination_config.local.json  gen_catalog.py  run.sh
scripts/faker/: config.json
scripts/postgres/: config.json
tests/: conftest.py  test_integration.py
