[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "airbyte-destination-altertable"
version = "0.1.0"
description = "Altertable's Airbyte destination"
readme = "README.md"
requires-python = ">=3.9"
authors = []
keywords = ["airbyte", "destination", "altertable"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "airbyte_cdk>=6.51.0",
    "pyarrow>=20.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[project.scripts]
airbyte-destination = "main:main"

[tool.setuptools]
packages = ["destination_altertable"]